<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/header_adm"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="center"
                android:text="X"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="8dp"
                android:text="@string/tv_name_adm"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input"
                android:layout_marginBottom="15dp"
                android:background="@color/colorIce"
                android:hint="@string/hint_name_adm"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="8dp"
                android:text="@string/tv_cpf_adm"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/cpf"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input"
                android:layout_marginBottom="15dp"
                android:background="@color/colorIce"
                android:hint="@string/hint_cpf_adm"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="8dp"
                android:text="@string/tv_email"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input"
                android:layout_marginBottom="15dp"
                android:background="@color/colorIce"
                android:hint="@string/hint_email_adm"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="8dp"
                android:text="@string/tv_phone_cel"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_input"
                android:layout_marginBottom="15dp"
                android:background="@color/colorIce"
                android:hint="@string/hint_phoneCel"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="10dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="5dp"
                android:layout_marginTop="25sp"
                android:background="@color/colorIce" />





            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/duo_shape_rectangled_rounded_color_accent"
                android:layout_marginBottom="15dp"
                android:minWidth="@android:dimen/thumbnail_width"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/bt_save"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>



    </LinearLayout>

    </LinearLayout>
</ScrollView>
