<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIce"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="12dp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_back_white_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/bt_address"
                    android:textColor="@color/colorWhite"
                    android:textSize="25dp" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/colorIce"
            android:orientation="vertical"
            tools:context="br.com.levaetras.fragment.HomeFragment">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:elevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_address"
                            android:textColor="@color/colorBlack" />

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_input"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorIce"
                            android:hint="@string/hint_address"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:padding="4dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_number"
                            android:textColor="@color/colorBlack" />

                        <EditText
                            android:id="@+id/number"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_input"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorIce"
                            android:hint="@string/hint_number"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:padding="4dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_neib"
                            android:textColor="@color/colorBlack" />

                        <EditText
                            android:id="@+id/neib"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_input"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorIce"
                            android:hint="@string/hint_neib"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:padding="4dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_zip"
                            android:textColor="@color/colorBlack" />

                        <EditText
                            android:id="@+id/zip"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_input"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorIce"
                            android:hint="@string/hint_zip"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:padding="4dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-light"
                                    android:lineSpacingExtra="8dp"
                                    android:text="@string/tv_city"
                                    android:textSize="16sp" />

                                <EditText
                                    android:id="@+id/city"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/height_input"
                                    android:layout_marginBottom="15dp"
                                    android:background="@color/colorIce"
                                    android:hint="@string/hint_city"
                                    android:imeOptions="actionNext"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:paddingLeft="10dp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-light"
                                    android:lineSpacingExtra="8dp"
                                    android:text="@string/tv_state"
                                    android:textSize="16sp" />

                                <EditText
                                    android:id="@+id/state"
                                    android:layout_width="match_parent"
                                    android:layout_height="@dimen/height_input"
                                    android:layout_marginBottom="15dp"
                                    android:background="@color/colorIce"
                                    android:hint="@string/hint_state"
                                    android:imeOptions="actionDone"
                                    android:inputType="text"
                                    android:maxLength="2"
                                    android:maxLines="1"
                                    android:nextFocusDown="@id/save"
                                    android:paddingLeft="10dp" />

                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:lineSpacingExtra="8dp"
                            android:text="@string/tv_reference"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/reference_address"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_textarea"
                            android:layout_marginBottom="15dp"
                            android:background="@color/colorIce"
                            android:gravity="top"
                            android:hint="@string/hint_reference"
                            android:inputType="text|textMultiLine"
                            android:paddingLeft="10dp"
                            android:paddingTop="4dp" />


                    </LinearLayout>


                    <Button
                        android:id="@+id/create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/duo_shape_rectangled_rounded_color_accent"
                        android:gravity="center"
                        android:minWidth="@android:dimen/thumbnail_width"
                        android:padding="8dp"
                        android:text="@string/bt_save"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>