<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorWhite"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title_zip"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center"
            android:text="X"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="8dp"
            android:text="@string/tv_zip"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorIce"
            android:hint="@string/hint_zip"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:layout_marginTop="25sp"
            android:background="@color/colorPrimary" />

    </LinearLayout>


    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/duo_shape_rectangled_rounded_color_accent"
        android:gravity="center"
        android:minWidth="@android:dimen/thumbnail_width"
        android:padding="8dp"
        android:text="@string/bt_save"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>